--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		max-width: 240px;
 		margin: 0 auto;
 		font-family: ;
-		color:rgb(2,0,36);
+		color:rgba(183, 61, 200, 0.71);
 	}
 </style>
 <body>
