--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		max-width: 240px;
 		margin: 0 auto;
 		font-family: ;
-		color:rgba(183, 61, 200, 0.71);
+		color:#ff09b3;
 	}
 </style>
 <body>
